# rps

./: .cspell.json  Cargo.toml  README.md  rust-toolchain.toml
src/: colors.rs  git.rs  init.rs  jobs.rs  main.rs  path.rs  segments.rs  status.rs  utils.rs
